2016-03-01  Werner Lemberg  <wl@gnu.org>

	[ftgrid] Exchange movement directions of `i' and `k' keys.

	This synchronizes the actions with its descriptions in the the help
	screen.

	* src/ftgrid.c (Process_Event): Implement it.

2016-03-01  Werner Lemberg  <wl@gnu.org>

	* src/ftgrid.c (grid_status_draw_outline): Fix memory leak.

2016-02-21  Alexei Podtelezhnikov  <apodtele@gmail.com>

	[ftgrid] Touch up.

	* src/ftgrid.c (status): Initialize `header' as NULL to display font
	name initially. Use bits of new field `work' to control...
	(grid_status_draw_outline, main, Process_Event): Updated accordingly.
	* src/ftgrid.1: Updated.

2016-02-21  Werner Lemberg  <wl@gnu.org>

	* src/ftgrid.c (event_grid_zoom): Make zoom up always work.

2016-02-21  Alexei Podtelezhnikov  <apodtele@gmail.com>

	[ftgrid] Enable LCD filtering.

	* src/ftgrid.c (event_lcd_filter_change): New function.
	(status, main, Process_Event, event_help): Updated.

2016-02-20  Alexei Podtelezhnikov  <apodtele@gmail.com>

	[ftgrid] Improve stroked path appearance.

	* src/ftgrid.c (grid_status_draw_outline): Hint scaled outline to
	follow gridlines and cover entire pixels.

2016-02-20  Alexei Podtelezhnikov  <apodtele@gmail.com>

	[ftgrid] Display monochrome and LCD bitmaps.

	* src/ftgrid.c (grid_status_draw_outline): Rework to use...
	(bitmap_scale): New function that implements bitmap scaling.

2016-02-13  Alexei Podtelezhnikov  <apodtele@gmail.com>

	[graph] Actually clear cache when full.

	* graph/gblender.c (gblender_lookup, gblender_lookup_channel):
	Updated.

2016-02-12  Alexei Podtelezhnikov  <apodtele@gmail.com>

	[ftgrid] Display rendered bitmap (new feature).

	* src/ftgrid.c (status): New field to control new feature.
	(grid_status_draw_outline): Implement new feature here.
	(Process_Event, usage): Updated.

2016-02-10  Alexei Podtelezhnikov  <apodtele@gmail.com>

	* src/ftgrid.c (grid_status_draw_outline): Use simpler line join.

2016-02-10  Alexei Podtelezhnikov  <apodtele@gmail.com>
