@@ -1,3 +1,12 @@
+2016-03-02  Werner Lemberg  <wl@gnu.org>
+
+	[ftgrid] Use colors for dot numbers.
+
+	We now have bitmap rendering also, and black numbers on a black
+	background are ... not optimal.
+
+	* src/ftgrid.c (grid_status_draw_outline): Implement it.
+
 2016-03-01  Werner Lemberg  <wl@gnu.org>
 
 	[ftgrid] Exchange movement directions of `i' and `k' keys.
